...
/* for non-webln compatible pages we do it oldschool,
   searching for all bolt11 manually */

setInterval(function() {
window.ReactNativeWebView.postMessage('interval');

  var searchText = "lnbc";

  var aTags = document.getElementsByTagName("span");
  var i;
  for (i = 0; i < aTags.length; i++) {
    if (aTags[i].textContent.indexOf(searchText) === 0) {
      tryToPay(aTags[i].textContent);
...
