...
          </View>
          <View style={styles.share}>
            <View style={[styles.customAmount, stylesHook.customAmount]}>
              <TextInput
                testID="ReceiveAmountInput"
                placeholderTextColor="#81868e"
                placeholder="Amount (optional)"
                style={[styles.customAmountText, stylesHook.customAmountText]}
                inputAccessoryViewID={BlueDismissKeyboardInputAccessory.InputAccessoryViewID}
                {...inputProps}
              />
              <Text style={styles.inputUnit}>{formattedUnit}</Text>
              <TouchableOpacity
...
