...
                  </TouchableOpacity>
                )}
                <View>
                  <TextInput
                    {...this.props}
                    key={this.state.amountKey}
                    testID="BitcoinAmountInput"
                    keyboardType="numeric"
                    adjustsFontSizeToFit
                    onChangeText={this.handleChangeText}
                    onBlur={() => {
                      if (this.props.onBlur) this.props.onBlur();
                    }}
...
