...
import Lnurl from '../lnurl';
import { LightningCustodianWallet } from './lightning-custodian-wallet';
import { Hit } from '../../api/boltcards/definitions/apiDtos';

export class LightningLdsWallet extends LightningCustodianWallet {
  static type = 'lightningLdsWallet';
  static typeReadable = 'Lightning';

  lnAddress?: string;
  addressOwnershipProof?: string;
  lndhubInvoiceUrl?: string;
  boltcard?: BoltCard;
  boltcards: BoltCard[] = [];
...
